--- a/estilo/style.css
+++ b/estilo/style.css
@@ -69,18 +69,37 @@ h2,
     animation: neonShadow 5s ease-in infinite;
 }
 
-.hero p {
-    font-size: 20px;
-    margin: 15px 0;
-    color: #e0e0e0;
+.horarios{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #fff;
+    box-shadow: 2px 2px 2px #000;
+    border-radius: 10px;
+    height: fit-content;
+    width: fit-content;
+    padding: 1.5em;
+    margin: 15px auto 20px;
+}
+
+.horarios .dia,
+.horarios .horas{
+    color: #000;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+}
+
+.horarios .horas{
+    background-color: #e91e63;
+    padding: 5px;
+    border-radius: 10px;
 }
 
 /* LOGO */
 .logo {
     width: 180px;
     position: absolute;
-    top: 20px;
-    left: auto;
+    top: 15px;
+    left: 20px;
     z-index: 1000;
 }
 
@@ -256,6 +275,13 @@ section {
     margin-bottom: 15px;
 }
 
+.card__ small{
+    font-size: 20px;
+    font-weight: 700;
+    padding: 10px;
+    text-shadow: 1px 1px 1px #e91e63;
+}
+
 .card__ p {
     font-size: 16px;
     margin: 8px 0;
@@ -295,6 +321,13 @@ section {
     gap: 1.5em;
     justify-content: center;
     align-items: center;
+}
+
+.contato span{
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    padding: 5px;
+    font-weight: 700;
 }
 
 /* SOCIAIS */
@@ -427,13 +460,15 @@ footer {
 }
 
 /* RESPONSIVO */
-@media (max-width: 600px) {
+@media (max-width: 768px) {
     .hero h1 {
         font-size: 32px;
     }
 
     .logo {
         width: 130px;
+        top: 20px;
+        left: auto;
     }
 
     .btn {
