--- a/estilo/style.css
+++ b/estilo/style.css
@@ -13,7 +13,9 @@ html {
 
 body {
     font-family: 'Open Sans', sans-serif;
-    background: #1a1a1a;
+    background-image:url(../img/fundo-n-escura.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     color: #e0e0e0;
     min-height: 100vh;
     height: 100dvh;
@@ -73,25 +75,21 @@ h2,
     display: flex;
     flex-direction: column;
     gap: 10px;
-    background-color: #fff;
-    box-shadow: 2px 2px 2px #000;
     border-radius: 10px;
     height: fit-content;
     width: fit-content;
     padding: 1.5em;
-    margin: 15px auto 20px;
+    margin: 15px auto 15px;
 }
 
 .horarios .dia,
 .horarios .horas{
-    color: #000;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+    color: #ffffff;
+    text-shadow: 2px 1px 1px rgba(0, 0, 0, 0.3);
 }
 
 .horarios .horas{
-    background-color: #e91e63;
     padding: 5px;
-    border-radius: 10px;
 }
 
 /* LOGO */
