--- a/estilo/style.css
+++ b/estilo/style.css
@@ -2,9 +2,10 @@
 
 /* RESET E BASE */
 * {
+    box-sizing: border-box; box-sizing: border-box;
+    max-width: 100vw;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 html {
